src/styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --color-bg-primary: #ede4da;
  --color-bg-secondary: #6f4c5b;
  --color-text-primary: #2d1f25;
  --color-text-secondary: #6f4c5b;
  --color-text-accent: #6f6f6f;
  --color-active: #db2777;
  --color-text-selection: #ede4da;
  --color-bg-selection: #130e10;
}

.dark {
  --color-bg-primary: #130e10;
  --color-bg-secondary: #6a6a6a;
  --color-text-primary: #ede4da;
  --color-text-secondary: #fafafa;
  --color-text-accent: #fff;
  --color-text-dark: #000;
  --color-text-selection: #130e10;
  --color-bg-selection: #ede4da;
}

* {
  box-sizing: border-box;
}

html,
body {
  @apply m-0 p-0 overscroll-none;
}

::selection {
  background: var(--color-bg-selection);
  color: var(--color-text-selection);
}

h1,
h2,
h3,
h4,
h5,
h6,
b,
.animated-link {
  color: var(--color-text-secondary);
  @apply dark:text-secondary;
}

.active-link {
  text-decoration: none;
  background-image: linear-gradient(var(--color-active), var(--color-active));
  background-repeat: no-repeat;
  background-position: bottom left;
  transition: background-size 0.3s ease-in-out;
}

.animated-link {
  @extend .active-link;
  background-size: 0% 3px;

  &:hover,
  &:active {
    background-size: 100% 3px;
  }
}

.active {
  @extend .active-link;
  background-size: 100% 3px;
}

button[disabled] {
  cursor: not-allowed;
  pointer-events: all;
}

.text-shadow {
  text-shadow: 0px 2px 0px rgb(0 0 0 / 30%);
}

.adjacent-post {
  & .arrow-btn {
    transition: width 300ms ease;
    width: 50px;
  }
  &:hover {
    & .arrow-btn {
      width: 60px;
    }
  }
}

.post-card-wrapper:hover h1 {
  color: var(--color-active);
  transition: 0.2s;
}

.post-card-wrapper:hover {
  box-shadow: 5px 10px 0px rgb(0 0 0 / 5%);
  transition: 0.2s;
}

.social-icon {
  height: 40px;
  width: 40px;
}

.search-icon {
  height: 24px;
  width: 24px;
}

.search-icon.full-search {
  display: none;
}

.close-icon {
  height: 24px;
  width: 24px;
  position: absolute;
  top: 3.4em;
  right: 1em;
  color: var(--color-text-primary);
  @apply dark:text-dark;
}

.search-input {
  font-size: 1.2em;
}

